2015-07-15  Youri Hoogstrate
	* Argument -t is implemented and allows to control the number of
	  threads
	  - Added corresponding tests
	* Argument -p is implemented and disables segment functionality
	  - Added corresponding tests

2015-07-15  Youri Hoogstrate
	* Added K-turn from U85 scaRNA's stem
	* Fixed tiny bug in Settings_test
	* Stay stick to term 'segment'

2015-07-14  Youri Hoogstrate
	* v1.0.0
	  - Added source and test files for main -> stable working version
	  - Added installer

2015-07-13  Youri Hoogstrate
	* Added source and test files for Zuker object

2015-07-10  Youri Hoogstrate
	* Added source and test files for GibbsFreeEnergy object

2015-06-30  Youri Hoogstrate
	* Travis CI tests for memory leaks (made ScoringMatrix smaller)
	* Added Pairing object and corresponding tests

2015-06-28  Youri Hoogstrate
	* Added the sparse triangular matrix object ScoringMatrix and
	  corresponding tests

2015-06-23  Youri Hoogstrate
	* Textual changes
	* Fixed two bugs in Settings
	* Added ReadData object files
	* Enabled testing of Settings objects

2015-06-22  Youri Hoogstrate
	* Added Settings object files
	* Added a test to validate parsing the '--help' argument
	* Added a test to validate parsing the '-V' argument
	* Added a test to validate parsing the '-f' argument
	* Changed variable in test/ReadSegments_test.cpp to const
	* Configuration for Travis CI

2015-06-19  Youri Hoogstrate
	* Changed to a more robust definition of the c++11 standard: c++0x

2015-06-04  Youri Hoogstrate
	* Added ScoringTree and tests
	* Added ReadSegments and tests

2015-05-06  Youri Hoogstrate
	* Added SubSequence and made SegmentTree compatible with it rather
	  than the PairingPlus
	* Added DEBUG tests to PairingPlus

2015-05-02  Youri Hoogstrate
	* Added PairingPlus code, test and datetypes.
	* Added SegmentTree and SegmentTree code
	* Dates have changed to 'ISO 8601' representation
	* Added DotBracket code and test
	* Changed some code in Segments.cpp to one-liners