@@ -1,0 +1,53 @@
+#!/usr/bin/env python
+
+"""
+@file scripts/energy-estimation/bin/energy-estimation
+
+@date 2015-07-15
+
+@author Youri Hoogstrate
+
+@section LICENSE
+<PRE>
+segmentation-fold can predict RNA 2D structures including K-turns.
+Copyright (C) 2012-2015 Youri Hoogstrate
+
+This file is part of segmentation-fold and originally taken from
+yh-kt-fold.
+
+segmentation-fold is free software: you can redistribute it and/or
+modify it under the terms of the GNU General Public License as published
+by the Free Software Foundation, either version 3 of the License, or
+(at your option) any later version.
+
+segmentation-fold is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program. If not, see <http://www.gnu.org/licenses/>.
+</PRE>
+"""
+
+from energy_estimation_utility.RNA import *
+from energy_estimation_utility.DataController import *
+from energy_estimation_utility.BinarySplit import *
+
+if __name__ == "__main__":
+    data = DataController("/usr/local/share/segmentation-fold/segments.xml")
+    
+    for segment in data:
+        for structure in segment.structures:
+            segments = {}
+            
+            if(len(structure['associated_segments']) > 0):
+                associated_segments = { key:value for key,value in data.segments.items() if key in structure['associated_segments'] }
+                print ">"+segment.name
+                print segment.sequence
+                
+                safe_name = segment.name.replace(" ","").replace("'","").replace('"','').replace('/','').replace('(','').replace(')','')
+                b = BinarySplit("segmentation-fold","/tmp/e/segments_"+safe_name+"_",segment.sequence, associated_segments)
+                print b.find_transitions()
+                print
+    
